<resources>
    <string name="app_name">UECAPP</string>
    <string name="action_settings">設定</string>
    <string name="title_activity_calendar">学年暦</string>
    <string name="title_activity_time_table">時間割</string>
    <string name="title_activity_link">リンク</string>
    <string name="title_activity_library">開館情報</string>
    <string name="title_activity_cancel">休講情報</string>
    <string name="title_activity_syllabus">シラバス</string>

    <!-- Cancel, Calendar -->
    <string name="nocancel">休講情報はありません</string>
    <string name="calendar_date">期間</string>
    <string name="calendar_note">備考</string>
    <string name="cancel_date">日時</string>
    <string name="cancel_classname">クラス</string>
    <string name="cancel_subject">科目</string>
    <string name="cancel_note">備考</string>
    <string name="cancel_error">インターネットに接続してください</string>

    <!-- Library -->
    <string name="lib_title_format">M月</string>
    <string name="lib_normal">通常開館\n9:00~21:30</string>
    <string name="lib_short">短縮開館\n9:00~17:00</string>
    <string name="lib_sat">土曜開館\n10:00~17:00</string>
    <string name="lib_early">繰り上げ開館\n8:30~21:30</string>
    <string name="lib_close">休館</string>
    <string name="title_activity_my_time_table">MyTimeTableActivity</string>

    <!-- timetable -->
    <string name="timet_grade1">1年</string>
    <string name="timet_grade2">2年</string>
    <string name="timet_grade3">3年</string>
    <string name="timet_grade4">4年</string>
    <string name="timet_others">その他</string>
    <string name="timet_1semester">1学期</string>
    <string name="timet_2semester">2学期</string>
    <string name="timet_3semester">3学期</string>
    <string name="timet_4semester">4学期</string>
    <string name="timet_5semester">5学期</string>
    <string name="timet_6semester">6学期</string>
    <string name="timet_7semester">7学期</string>
    <string name="timet_8semester">8学期</string>
    <string name="timet_english">英語</string>
    <string name="timet_foreign">第2外国語</string>
    <string name="timet_high">上級</string>
    <string name="timet_international">国際</string>
    <string name="timet_teach_old">教職(学部)</string>
    <string name="timet_teach_new">教職(学域)</string>
    <string name="timet_link">大学院連携</string>
    <string name="timet_getting">ダウンロード中</string>
    <!-- timetable master and doctor -->
    <string name="timet_after">28年度以降入学</string>
    <string name="timet_before">27年度以前入学</string>
    <string name="timet_doctor">IE博士</string>
    <string name="timet_master_after28">IE修士(28年度以降入学)</string>
    <string name="timet_master_before27">IE修士(27年度以前入学)</string>
    <string name="timet_it">高度IT人材育成プログラム</string>
    <string name="timet_ie_all">全専攻</string>
    <string name="timet_ie_j">J専攻</string>
    <string name="timet_ie_i">I専攻</string>
    <string name="timet_ie_m">M専攻</string>
    <string name="timet_ie_s">S専攻</string>
    <string name="timet_allyear">前・後学期</string>
    <string name="timet_is">IS</string>
    <string name="timet_is_1st">IS前学期</string>
    <string name="timet_is_2nd">IS後学期</string>


    <!-- MyTimeTable -->
    <string name="hint_subject">科目名</string>

</resources>

